Kubernetes/Ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: NodePort
  selector:
    app: hello
    version: 2.0.0
  ports:
  - name: http #we can provide name to the port and refer it in ingress instead of port
    protocol: TCP
    port: 80
    targetPort: 50001
