Kubernetes/Ingress/ingress-test.yaml
#apiVersion: extensions/v1beta1 #deprecated
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: kubernetes.docker.internal   #- host: kube-ingress.com http://kubernetes.docker.internal/anotherpath
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  name: http
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echoserver
                port:
                  name: echo

#backed:
  #serviceName: hello-service 
  #servicePort: http
